--- a/core/pom.xml
+++ b/core/pom.xml
@@ -147,7 +147,14 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 		</dependency>
-
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+        </dependency>
 		<!-- ######################### TEST ######################### -->
 		<dependency>
 			<groupId>pentaho-kettle</groupId>
