[PPP-4865] - Vulnerable Component: snakeyaml

--- a/assemblies/plugin/pom.xml
+++ b/assemblies/plugin/pom.xml
@@ -212,8 +212,8 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.yaml</groupId>
-			<artifactId>snakeyaml</artifactId>
+			<groupId>org.hitachivantara</groupId>
+			<artifactId>safeyaml</artifactId>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
