--- a/pom.xml
+++ b/pom.xml
@@ -198,9 +198,9 @@
       </dependency>
 
       <dependency>
-        <groupId>org.yaml</groupId>
-        <artifactId>snakeyaml</artifactId>
-        <version>${snakeyaml.version}</version>
+        <groupId>org.hitachivantara</groupId>
+        <artifactId>safeyaml</artifactId>
+        <version>${safeyaml.version}</version>
         <scope>runtime</scope>
         <exclusions>
           <exclusion>
