--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>10.2.0.0-SNAPSHOT</version>
+    <version>10.3.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>pentaho-cassandra-plugin-parent</artifactId>
   <packaging>pom</packaging>
@@ -40,7 +40,6 @@
     <jamm.version>0.3.0</jamm.version>
     <high-scale-lib.version>1.0.6</high-scale-lib.version>
     <supercsv.version>2.1.0</supercsv.version>
-    <libthrift.version>0.12.0</libthrift.version>
     <junit.version>4.13.2</junit.version>
     <xml-apis.version>2.0.2</xml-apis.version>
     <byte-buddy.version>1.12.16</byte-buddy.version>
@@ -314,7 +313,7 @@
       <dependency>
         <groupId>org.apache.thrift</groupId>
         <artifactId>libthrift</artifactId>
-        <version>${libthrift.version}</version>
+        <version>${org.apache.thrift.version}</version>
         <scope>runtime</scope>
         <exclusions>
           <exclusion>
