Revert "[PPP-4743] - Added changes for Vulnerable Component: Jackson ASL (Cassandra plugin)"
This reverts commit 88e44bbb09682cc43af171088d71d754267f31c4.

--- a/assemblies/plugin/pom.xml
+++ b/assemblies/plugin/pom.xml
@@ -249,5 +249,16 @@
 			<artifactId>jackson-core-asl</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 </project>
